Fixed content z-index, fixed stripes jagged edges

--- a/src/css/atoms/stripes.less
+++ b/src/css/atoms/stripes.less
@@ -1,9 +1,11 @@
 .stripe-container {
     .absolute(0);
+    transform: translateZ(0);
 
     .stripe-item {
         position: absolute;
         .size(80rem, 14rem);
+        outline: 1px solid transparent;
     }
 
     .stripe-item.-green, .stripe-item.-teal {
